discussion/kv_engine/135893/135893_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-41321: Defer collection statistic updates until successful commit

Collection statistics for persistent buckets are updated from the
flusher before we commit, the reason this is done like that is so
we can do '_local' updates to include collection statistic changes made
in the flusher batch.

MB-41321 identified that this approach was flawed and can result in
incorrect statistics or underflow exceptions when commit fails. When
the flusher fails, the current batch of items is retried, this means
each retry will apply the same changes to the collection statistics,
we will then count items again for each flush retry.

This commit changes how collection statistics are updated to occur in
multiple steps.

1) As the items of the batch are processed, we now update a flusher
owned map of collection-ID to collection statistics - this collects
the 'deltas' of changes being made by the flusher batch.

2) Before commit we read the current collection statistics and apply
the collected changes to generate statistics for the '_local' updates.

3) If the commit is successful, we update the current in-memory
statistics.

If the flush is retried, the flusher owned 'collector' is recreated
for each retry, so each retry just counts for its run.

Change-Id: Icf57856233843646111e63126bed95634e169412

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-09-09 11:04:43.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-09-09 12:51:03.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4342/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1094:19: error: no matching function for call to "compact" [clang-diagnostic-error]
        errCode = cb::couchstore::compact(
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/couchstore/include/libcouchstore/couch_db.h:1245:20: note: candidate function not viable: requires at most 7 arguments, but 8 were provided
couchstore_error_t compact(Db& source,
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/couchstore/include/libcouchstore/couch_db.h:1307:20: note: candidate function not viable: requires at least 9 arguments, but 8 were provided
couchstore_error_t compact(Db& source,
                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4342/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1094:19:
error: no matching function for call to "compact" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4342/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26144/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1094:19:
error: no matching function for call to "compact"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26144/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4682/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30198/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(1094): error C2661: "cb::couchstore::compact": no overloaded function takes 8 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30198/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5571/ : FAILURE

Compile error at [2020-09-09T11:07:19.164Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1104:30:
error: no matching function for call to ?compact(Db&, const char*, couchstore_open_flags&, CouchKVStore::compactDBInternal(compaction_ctx*, cb::couchstore::CompactRewriteDocInfoCallback)::<lambda(Db&, DocInfo*, sized_buf)>, std::remove_reference<std::function<int(_docinfo*&, _sized_buf)>&>::type, FileOpsInterface*&, std::chrono::duration<long int, std::ratio<1, 1000000000> >::rep, std::chrono::duration<long int, std::ratio<1, 1000000000> >::rep)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5571/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5793/ : FAILURE

Compile error at [2020-09-09T11:07:23.832Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1104:30:
error: no matching function for call to ?compact(Db&, const char*, couchstore_open_flags&, CouchKVStore::compactDBInternal(compaction_ctx*, cb::couchstore::CompactRewriteDocInfoCallback)::<lambda(Db&, DocInfo*, sized_buf)>, std::remove_reference<std::function<int(_docinfo*&, _sized_buf)>&>::type, FileOpsInterface*&, std::chrono::duration<long int, std::ratio<1, 1000000000> >::rep, std::chrono::duration<long int, std::ratio<1, 1000000000> >::rep)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5793/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13488/ : FAILURE

Compile error at [2020-09-09T11:10:07.033Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1104:30:
error: no matching function for call to ?compact(Db&, const char*, couchstore_open_flags&, CouchKVStore::compactDBInternal(compaction_ctx*, cb::couchstore::CompactRewriteDocInfoCallback)::<lambda(Db&, DocInfo*, sized_buf)>, std::remove_reference<std::function<int(_docinfo*&, _sized_buf)>&>::type, FileOpsInterface*&, std::chrono::duration<long int, std::ratio<1, 1000000000> >::rep, std::chrono::duration<long int, std::ratio<1, 1000000000> >::rep)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13488/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5665/ : FAILURE

Compile error at [2020-09-09T11:27:07.758Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1104:30:
error: no matching function for call to ?compact(Db&, const char*, couchstore_open_flags&, CouchKVStore::compactDBInternal(compaction_ctx*, cb::couchstore::CompactRewriteDocInfoCallback)::<lambda(Db&, DocInfo*, sized_buf)>, std::remove_reference<std::function<int(_docinfo*&, _sized_buf)>&>::type, FileOpsInterface*&, std::chrono::duration<long int, std::ratio<1, 1000000000> >::rep, std::chrono::duration<long int, std::ratio<1, 1000000000> >::rep)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5665/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2869/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
